test/variables/ref/errors-type-mismatch-fn-2.good
errors-type-mismatch-fn-2.chpl:4: In method 'this':
errors-type-mismatch-fn-2.chpl:5: error: Initializing a reference with another type
errors-type-mismatch-fn-2.chpl:4: note: Reference has type real(64)
errors-type-mismatch-fn-2.chpl:5: note: Initializing with type int(64)
